# aoc-2018

./: .dir-locals.el  .gitignore  CMakeLists.txt  ChronalCharge.cu  ChronalCharge.cuh  README.md  new-day  tset  utils.h
day-01/: .gitignore  CMakeLists.txt  ChronalCalibration.cpp  ChronalCalibration.h  ChronalCalibrationTest.cpp  Makefile  frequency.cpp  test
day-02/: .gitignore  CMakeLists.txt  InventoryManagement.cpp  InventoryManagement.h  InventoryManagementTest.cpp  test
day-03/: FabricClaims.cpp  FabricClaims.h  FabricClaimsTest.cpp  test
day-04/: ReposeRecord.cpp  ReposeRecord.h  ReposeRecordTest.cpp  process-input  test
day-05/: AlchemicalReduction.cpp  AlchemicalReduction.h  AlchemicalReductionTest.cpp  notes  test
day-07/: InstructionSet.h  InstructionSetTest.cpp  input.txt  test  transform-input
day-08/: MemoryManeuver.cpp  MemoryManeuver.h  MemoryManeuverTest.cpp  notes  test
day-09/: MarbleMania.cpp  MarbleMania.h  MarbleManiaTest.cpp  test
day-10/: StarAlignment.cpp  StarAlignment.h  StarAlignmentTest.cpp  input.txt  test  transform-input
day-11/: ChronalCharge.cpp  ChronalCharge.h  ChronalChargeTest.cpp  test
day-13/: .#MinecartMadness.h  MinecartMadness.cpp  MinecartMadness.h  MinecartMadnessTest.cpp  notes  test
day-16/: ChronalClassification.cpp  ChronalClassification.h  ChronalClassificationTest.cpp  Opcodes.h  OpcodesTest.cpp  input-part-1.txt  notes  test
day-18/: GameOfLumber.cpp  GameOfLumber.h  GameOfLumberTest.cpp  test
day-19/: Elfcode.cpp  Elfcode.h  ElfcodeOperations.h  ElfcodeTest.cpp  input.txt  notes  thing.rb
day-21/: ChronalConversion.cpp  ChronalConversion.h  ChronalConversionTest.cpp  input.txt  notes  test
day-24/: ImmuneSystemSimulator.cpp  ImmuneSystemSimulator.h  ImmuneSystemSimulatorTest.cpp  test  test-input.txt
utils/: Point.h  PointTest.cpp  input-with-blank-lines.txt  utils.cpp  utils.h  utilsTest.cpp
